[package]
name = "vyges-remap"
version = "0.1.17"
edition = "2021"
description = "Loom engine: file-level multi-output technology re-mapping (mockturtle emap) over the vyges-emap driver"
repository = "https://github.com/vyges-tools/remap"
homepage = "https://vyges.com"
license = "Apache-2.0"

[[bin]]
name = "vyges-remap"
path = "src/main.rs"

[dependencies]
# House style: std + serde_json only. serde_json frames the --describe contract
# and the --json result envelope; no async, no external process crates.
serde_json = "1"
# Structured logging: summary events to stderr (mirrors vyges-drc/vyges-lvs).
vyges-events = { git = "https://github.com/vyges-tools/events", branch = "main", default-features = false }

[profile.release]
strip = true
